# local_issues_lib

./: .geminirc.yaml  .gitignore  2  Cargo.toml  README.md  README_written_by_gemma3_12b.md  ReleaseNote.md  Tasks.md  chglog.md  memo.md  memorandum.md  v031to032.md
.github/workflows/: rust.yml
articles/: LLM_feature.md
doc/: help.html  index.html  src-files.js
doc/chrono/: all.html  enum.Weekday.html  index.html  struct.Date.html  struct.Days.html  struct.Local.html  struct.Months.html  struct.NaiveTime.html  struct.OutOfRange.html  struct.Utc.html  trait.Offset.html  trait.TimeZone.html  trait.Timelike.html
doc/derive_getters/: all.html  derive.Getters.html
doc/easy_storage/: enum.Error.html  index.html  sidebar-items.js
doc/getrandom/: all.html  fn.fill_uninit.html
doc/iana_time_zone/: all.html  enum.GetTimezoneError.html  fn.get_timezone.html
doc/libc/: constant.ABDAY_2.html  constant.ABDAY_5.html  constant.ABDAY_7.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_8.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_TICK.html  (+3170 more)
docs/: crates.js  settings.html
examples/: local_issue_cli_ex.rs  main.rs
reference/: Config.md  view.md
src/: config.rs  db.rs  display_options.rs  lib.rs  message.rs  printer.rs  storage.rs  user.rs  users.rs
(+6996 files in other folders)
