[package]
name = "local_issues_lib"
description = "the lib provide feature that local issue (like a github)"
version = "0.16.8"
authors = ["Uliboooo"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Uliboooo/local_issues_lib"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
home = "0.5.11"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
derive-getters = "0.5.0"
